@@ -28,7 +28,7 @@ perl = 5.014000
 [CheckExtraTests]
 [NextRelease]
 [VersionFromModule]
-[PkgVersion]
+[OurPkgVersion]
 [GitHub::Meta]
 repo = team-at-cpan/Ryu
 remote = github
@@ -55,7 +55,6 @@ directory = /home/tom/dev/CPAN-Archive
 ; [Test::UnusedVars]
 [Signature]
 [SpellingCommonMistakesTests]
-[ReversionOnRelease]
 [Test::ReportPrereqs]
 [CopyFilesFromBuild]
 copy = Makefile.PL
@@ -67,3 +66,4 @@ allow_dirty = Makefile.PL
 [Git::Tag]
 tag_format = v%v
 tag_message = Tag v%v for CPAN release
+[ReversionOnRelease]
