@@ -717,6 +717,51 @@ sub each_as_source : method {
     }, $src)
 }
 
+=head2 switch_str
+
+Given a condition, will select one of the alternatives based on stringified result.
+
+=cut
+
+sub switch_str {
+    use Variable::Disposition qw(retain_future);
+    use Scalar::Util qw(blessed);
+    use namespace::clean qw(retain_future);
+    my ($self, $condition, @args) = @_;
+
+    my $src = $self->chained(label => (caller 0)[3] =~ /::([^:]+)$/);
+    my @active;
+    $self->completed->on_ready(sub {
+        retain_future(
+            Future->needs_all(
+                grep $_, @active
+            )->on_ready(sub {
+                $src->finish
+            })
+        );
+    });
+
+    $self->each_while_source(sub {
+        my ($item) = $_;
+        my $rslt = $condition->($item);
+        retain_future(
+            (blessed($rslt) && $rslt->isa('Future') ? $rslt : Future->done($rslt))->on_done(sub {
+                my ($data) = @_;
+                my @copy = @args;
+                while(my ($k, $v) = splice @copy, 0, 2) {
+                    if(!defined $v) {
+                        # Only a single value (or undef)? That's our default, just use it as-is
+                        return $src->emit(map $k->($_), $item)
+                    } elsif($k eq $data) {
+                        # Key matches our result? Call code with the original item
+                        return $src->emit(map $v->($_), $item)
+                    }
+                }
+            })
+        )
+    }, $src)
+}
+
 =head2 ordered_futures
 
 Given a stream of L<Future>s, will emit the results as each L<Future>
